# physvoyant

./: .gitignore  .gitmodules  CMakeLists.txt  notes.txt
source/: defines.hpp  gl.c  main.cpp
source/DArray/: DArray.cpp  DArray.hpp
source/DLinkedList/: DLinkedList.cpp  DLinkedList.hpp  DLinkedListNode.cpp  DLinkedListNode.hpp
source/Engine/: Clock.cpp  Clock.hpp  Engine.cpp  Engine.hpp
source/components/: Colliders.cpp  Colliders.hpp  ComponentBase.hpp  GravityComponent.cpp  GravityComponent.hpp  RenderableBase.hpp  Renderables.cpp  Renderables.hpp  include_components.hpp
source/consoleReader/: ConsoleReader.hpp
source/data_structures/: ChunkedVector.hpp  ComponentContainer.hpp  ComponentIdentifier.hpp  DArray.hpp  DDelegate.hpp  DDelegateAction.hpp  DLinkedList.hpp  DLinkedListNode.hpp  OctTree.hpp  Reflection.hpp  ReflectionObject.hpp  VertexBuffer.cpp  VertexBuffer.hpp  include.hpp  include_data_structures.hpp
source/game_objects/: Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  include_objects.hpp
source/geometry/: MovementSolver.hpp  Plane.cpp  Plane.hpp  PosRot.hpp  Transform.cpp  Transform.hpp  Vertex.hpp  include_geometry.hpp
source/glad/: gl.h
source/interfaces/: ICollider.hpp  IComponent.hpp  IRenderable.hpp  ISceneComponent.hpp  IUpdate.hpp  IUpdateable.hpp  include_interfaces.hpp
source/math/: MovementSolver.hpp  include_math.hpp
source/renderer/: Renderer.cpp  Renderer.hpp
source/scene/: Scene.cpp  Scene.hpp  SceneFactory.cpp  SceneFactory.hpp  include_scene.hpp
source/scene_components/: ObjectCollider.cpp  ObjectMover.cpp  (+4 more)
